# tuber-tui

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml
skill/: SKILL.md
src/: app.rs  main.rs  model.rs  ui.rs
tuber-cli/: Cargo.toml
tuber-cli/src/: main.rs
tuber-lib/: Cargo.toml
tuber-lib/src/: client.rs  lib.rs  model.rs  parse.rs
tuber-tui/: Cargo.toml
tuber-tui/src/: app.rs  main.rs  ui.rs
