[workspace]
members = ["tuber-lib", "tuber-tui", "tuber-cli"]
resolver = "2"

[workspace.package]
version = "0.6.0"
edition = "2021"

[workspace.dependencies]
tuber-lib = { path = "tuber-lib" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
